Implementation de la map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">CVI</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="map_fragment">OpenStreetMap</string>
+    <string name="map_fragment">OpenStreetMapSaluut</string>
     <string name="map_title">Map</string>
     <string name="gallery_fragment">Firebase Cloud Storage</string>
     <string name="gallery_title">Gallery</string>
@@ -10,4 +10,5 @@
     <string name="trip_title">Voyage</string>
     <string name="item_gallery_description">affiche les images</string>
     <string name="grid_item_description">grille d\'images</string>
+
 </resources>
