--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="grid_item_description">grille d\'images</string>
     <string name="add_trip_button_desc">bouton d\'ajout d\'un nouveau voyage</string>
     <string name="dialog_add_trip_text">Ajout d\'un nouveau voyage</string>
-    <string name="edit_trip_name_text">Entrez le nom du voyage</string>
+    <string name="edit_trip_name_text">Entrer le nom du voyage</string>
     <string name="cancel_button_text">Annuler</string>
     <string name="add_button_text">Ajouter</string>
     <string name="edit_trip_button_desc">option pour le voyage</string>
@@ -24,5 +24,10 @@
     <string name="refresh_button_desc">rafraichissement de l\'affichage des voyages</string>
     <string name="rename_option_title">Renomer le voyage</string>
     <string name="preview_photos_title">Aperçu voyage</string>
+    <string name="rename_trip_text">Renommer le nom du voyage</string>
+    <string name="rename_text">Entrer le nouveau nom du voyage</string>
+    <string name="rename_button_text">Renommer</string>
+    <string name="zoom_out_button_desc">Réduire le zoom sur la carte</string>
+    <string name="zoom_in_button_desc">Augmenter le zoom sur la carte</string>
 
 </resources>
