--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="zoom_out_button_desc">Réduire le zoom sur la carte</string>
     <string name="zoom_in_button_desc">Augmenter le zoom sur la carte</string>
     <string name="photos_on_map_button_desc">place les photos sur la map</string>
+    <string name="get_location_button_desc">pose des markers correspondant aux photos</string>
 
 </resources>
