--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,7 @@
     <string name="zoom_in_button_desc">Augmenter le zoom sur la carte</string>
     <string name="photos_on_map_button_desc">place les photos sur la map</string>
     <string name="get_location_button_desc">pose des markers pour chaque photos</string>
+    <string name="main_activity_text">Dans mon application, il est possible de:\n\n- Créer un voyage en incluant un nom de voyage et des photos \n- Editer ce voyage par en le renommant, le supprimant ou bien\n en y rajoutant des photos\n- Créer plusieurs markers sur la map tel que l\'on puisse identifier où les photos ont été prises (si elles contiennent des données GPS)\n\nTout cela est possible depuis la barre de navigation qui permet de naviguer entre les 3 pages principales</string>
+    <string name="main_activity_title">Carnet de voyage intelligent</string>
 
 </resources>
